[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/FairfaxStationNF20.tres" type="DynamicFont" id=2]
[ext_resource path="res://UI/Joystick.tscn" type="PackedScene" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.501961, 0, 0.501961 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.501961, 0, 0, 0.501961 )

[node name="HUD" type="Panel"]
margin_left = 320.0
margin_top = 64.0
margin_right = 704.0
margin_bottom = 449.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( -192, 320 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 448.0
margin_top = -64.0
margin_right = 702.0
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageLabel" type="Label" parent="."]
margin_left = 96.0
margin_top = 64.0
margin_right = 288.0
margin_bottom = 168.0
grow_horizontal = 2
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -96.0
margin_top = -0.5
margin_right = 96.0
margin_bottom = 47.5
grow_horizontal = 2
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="VersionLabel" type="Label" parent="."]
margin_left = 576.0
margin_top = 352.0
margin_right = 704.0
margin_bottom = 416.0
text = "v0.0.7a"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HPBar" type="ProgressBar" parent="."]
margin_left = -320.0
margin_top = -64.0
margin_right = -128.0
margin_bottom = -48.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
max_value = 10.0
step = 1.0
value = 10.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfigurationButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 256.0
margin_right = 288.0
margin_bottom = 288.0
custom_fonts/font = ExtResource( 2 )
text = "Configurations"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
margin_left = 96.0
margin_top = 304.0
margin_right = 288.0
margin_bottom = 332.0
custom_fonts/font = ExtResource( 2 )
text = "Exit"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="ConfigurationButton" to="." method="_on_ConfigurationButton_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
